--- a/ProgrammingAssignment2/.classpath
+++ b/ProgrammingAssignment2/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Administrator/Downloads/sqljdbc_8.4.1.0_enu/sqljdbc_8.4/enu/mssql-jdbc-8.4.1.jre8.jar"/>
+	<classpathentry kind="lib" path="/Users/Michelle/Downloads/sqljdbc_8.4\enu/mssql-jdbc-8.4.1.jre8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
